# fasta-checksum-utils

./: .gitignore  README.md  pyproject.toml  test.bash
.github/workflows/: lint.yml  release.yml  test.yml
fasta_checksum_utils/: __init__.py  _contig.py  _file.py  algorithms.py  entry.py  fasta.py  file.py
tests/: test_checksums.py
tests/data/: example.fa  example.fa.fai
