[tool.poetry]
name = "fasta-checksum-utils"
version = "0.1.0"
description = "Library and command-line utility for checksumming FASTA files and individual contigs."
authors = ["David Lougheed <david.lougheed@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "fasta_checksum_utils"}]

[tool.poetry.dependencies]
python = "^3.8"
pysam = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
